force-app/main/default/objects/cdcpc__GlobalLeadTime__c/cdcpc__GlobalLeadTime__c.object-meta.xml
<CustomObject>
    <label>Global Lead Time</label>
    <nameField>
        <label>Global Lead Time</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Lead Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>