force-app/main/default/objects/cdcpc__GlobalLeadTime__c/fields/cdcpc__Schedule__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Schedule__c</fullName>
    <label>Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>