force-app/main/default/objects/cdcpc__GlobalLeadTime__c/fields/cdcpc__X10__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__X10__c</fullName>
    <label>10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>