force-app/main/default/objects/cdcpc__GlobalLeadTime__c/fields/cdcpc__X20__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__X20__c</fullName>
    <label>20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>