force-app/main/default/objects/cdcpc__GlobalLeadTime__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>cdcpc__CDC_Ext_ID__c</columns>
    <columns>NAME</columns>
    <columns>cdcpc__Schedule__c</columns>
    <columns>cdcpc__QtyLL__c</columns>
    <columns>cdcpc__QtyUL__c</columns>
    <columns>cdcpc__X10__c</columns>
    <columns>cdcpc__X20__c</columns>
    <columns>cdcpc__X30__c</columns>
    <columns>cdcpc__X40__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__Schedule__c</field>
        <operation>contains</operation>
        <value>DA-0-50</value>
    </filters>
    <label>All Global Lead Times</label>
</ListView>